gccida/g2/dead_or_set_p
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dead_or_set_p/src/rtlanal.c:2152:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v3 = ( ( unsigned int)( mode_class_0[v6] - 5) < 2) + ( _DWORD)rtuint; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dead_or_set_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O2/gcc-gcc-O2/dead_or_set_p/src/obj/rtlanal.o] Error 1
